# toolbar.py

./: .gitignore  Chrome_translate.py  Chrome_translate_enhanced.py  README.md  VALIDATION_REPORT.md  enhanced_translate_gui.py  enhanced_translator_complete.py  enhanced_word_mapper.py  error_handler.py  execution_manager.py  file_manager.py  integration_manager.py  main_enhancement.py  projects.py  pyproject.toml  settings_manager.py  test_chrome_translate_enhanced.py  test_translation_fix.py  toolbar.py  toolbar_enhanced.py  toolbar_services.py  toolbar_ui_components.py  translate-full-enhanced.py  translate-full.py  translate_cli_test.py  validation_framework.py
.github/workflows/: translate-ci.yml
config/: __init__.py  manager.py  migration.py  schema.py  validator.py
core/: __init__.py  abstractions.py  circuit_breaker.py  container.py  exceptions.py  interfaces.py  recovery.py  registry.py  retry.py
translate/: __init__.py  applier_mt.py  chrome_translate.py  cli.py  config.py  error_healer.py  gui.py  main.py  mapper.py  remove_comments.py  zai_client.py  zai_translator.py
translate/translators/: base.py
